2007-01-30 Daniel Baumann <daniel@debian.org>

	* Added cron job for autobuilding images.

2007-01-25 Daniel Baumann <daniel@debian.org>

	* Added additional pruning to minimal flavour.
	* Using interactive frontend while processing --hook.

2007-01-24 Daniel Baumann <daniel@debian.org>

	* Applied patches from Otavio Salvador <otavio@debian.org>:
	  - adding "--keyring" flag.
	  - adding LIVE_DISK_VOLUME.
	  - adding start-stop-daemon wrapper to avoid daemons to be started.
	  - adding workaround to prevent binfmt locking /proc.
	  - adding LIVE_ISOLINUX_SPLASH.

2007-01-19 Daniel Baumann <daniel@debian.org>

	* Replacing mkisofs with genisoimage.

2007-01-16 Daniel Baumann <daniel@debian.org>

	* Switched default distribution back to unstable, as unstable is usable
	  again from the kernel point of view.
	* Added file to the minimal package list.

2007-01-04 Daniel Baumann <daniel@debian.org>

	* Added workaround for new xorg packages by including
	  xserver-xorg-input-all and xserver-xorg-video-all in all X11 package
	  lists. See #405639 for more information.
	* Added xdebconfigurator to all X11 package lists.
	* Adding workaround for initrd backup files.

2006-11-05 Daniel Baumann <daniel@debian.org>

	* Applied patch from Markus Bauer <bauer-markus@web.de>:
	  - fixing script sourcing to exclude files in .svn

2006-11-03 Daniel Baumann <daniel@debian.org>

	* Fixed typo in the policy-rc.d hack.

2006-11-02 Daniel Baumann <daniel@debian.org>

	* Using aptitude instead of apt-get.
	* Added '--with-recommends' and '--without-recommends'.

2006-11-01 Daniel Baumann <daniel@debian.org>

	* Fixed regression when using -d ${CODENAME} wrt/ kernel packages.

2006-10-29 Daniel Baumann <daniel@debian.org>

	* Added minimal-net flavour.

2006-10-28 Daniel Baumann <daniel@debian.org>

	* Added console-common to standard selection.

2006-10-27 Daniel Baumann <daniel@debian.org>

	* Added patch from Otavio Salvador <otavio@debian.org>:
	  - fixing preseeding error-handling.