@@ -8,5 +8,6 @@ console-common locales
 
 # GNOME Full
 gdm gnome
+desktop-base
 
-x-window-system-core xserver-xorg-input-all xserver-xorg-video-all xdebconfigurator
+x-window-system-core
