@@ -7,7 +7,7 @@ eject file sudo vim-tiny
 console-common locales
 
 # X11
-wdm x-window-system-core xserver-xorg-input-all xserver-xorg-video-all xdebconfigurator
+wdm x-window-system-core
 
 # GNUstep
 gnustep gnumail.app talksoup.app viewpdf.app wmaker gnustep-icons
