@@ -8,5 +8,6 @@ console-common locales
 
 # KDE Core
 kde-core kdm
+desktop-base
 
-x-window-system-core xserver-xorg-input-all xserver-xorg-video-all xdebconfigurator
+x-window-system-core
