@@ -8,8 +8,9 @@ console-common locales
 
 # KDE
 kde kdm
+desktop-base
 
-x-window-system-core xserver-xorg-input-all xserver-xorg-video-all xdebconfigurator
+x-window-system-core
 
 # KDE Full
 koffice
