@@ -7,4 +7,4 @@ eject file sudo vim-tiny
 console-common locales
 
 # X11
-xdm x-window-system xserver-xorg-input-all xserver-xorg-video-all xdebconfigurator
+xdm x-window-system
